[tool.poetry]
name = "taillard-instance-tools"
version = "0.1.0"
description = ""
authors = ["Dominik Bleidorn <dominik.bleidorn@inosim.com>"]
readme = "README.md"
packages = [{include = "taillard_instance_tools"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

